# ko-pii

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: build_eval_corpus.py  fetch_corpus.py
data/corpus/: korea_kr.txt  public_corpus.txt  wiki_corpus.txt  wikipedia.txt
docs/: EVALUATION_REPORT.md  annotation_policy.md  coverage.md  domain_fit_report.md  improvement_report.md  integration_mcp.md  integration_presidio.md  kdpii_session_report.md  kdpii_visual_compare.html  legal_mapping.md  real_data_evaluation.md  real_world_crawl_validation.md  risk_levels.md  showcase.html  showcase.md  user_megademo.html  user_megademo.md
examples/: 01_basic_anonymize.py  02_vault_reveal.py  03_processing_modes.py  04_strategies_compared.py  05_combined_risk_k_anonymity.py  06_file_inputs.py  07_tabular_csv.py  08_batch_processing.py  09_review_workflow.py  10_html_report.py  11_audit_log.py  12_encrypted_vault.py  13_llm_safe_filter.py  14_hybrid_with_privacy_filter.py  15_presidio_integration.py  16_all_pii_showcase.py  17_realistic_document.py  18_user_megademo.py  README.md
src/k_pii/: __init__.py  anonymizer.py  batch.py  cli.py  detect.py  tabular.py
src/k_pii/analytics/: __init__.py  combined_risk.py  k_anonymity.py
src/k_pii/checksum/: luhn.py
src/k_pii/context/: __init__.py  context_rules.py  hanja.py  name_dictionary.py  particles.py  romanization.py
src/k_pii/core/: modes.py
src/k_pii/dictionaries/: __init__.py  agencies.py  agency_titles.py  common_words.py  districts.py  field_labels.py  majors.py  surnames.py  titles.py  universities.py
src/k_pii/domain/: __init__.py  civil_petition.py  government.py  hr.py
src/k_pii/eval/: __init__.py  benchmark.py  fp_collector.py  kdpii.py  klue_benchmark.py  klue_ner.py  metrics.py  synth.py
src/k_pii/generalization/: __init__.py  address.py  age.py  date.py  occupation.py
src/k_pii/integrations/: mcp_server.py  presidio_plugin.py
src/k_pii/io_/: __init__.py  csv_reader.py  dispatcher.py  docx.py  hwp.py  hwpx.py  pdf.py  plain.py  xlsx.py
src/k_pii/legal/: __init__.py  mapping.py
src/k_pii/modes/: __init__.py  _apply.py  fpe.py  hashed.py  partial.py  redact.py  tokenize.py
src/k_pii/patterns/: account.py  address.py  birth.py  business_reg.py  card.py  court_case.py  edi_drug.py  fax.py  ip.py  kcd.py  medical_insurance.py  passport.py  person.py  personal_attr.py  phone.py  pnu.py  vehicle.py
src/k_pii/reporting/: __init__.py  certificate.py  html_report.py  summary.py
src/k_pii/review/: __init__.py  feedback.py  queue.py
src/k_pii/vault/: __init__.py  audit.py  encrypted.py  reversible.py
src/ko_pii/: detect.py
src/ko_pii/legal/: mapping.py
src/ko_pii/patterns/: address.py  nationality.py
tests/integration/: test_end_to_end.py
tests/unit/: test_anonymizer.py  test_batch.py  test_cli.py  test_detect_all.py  test_modes_policy.py  test_tabular.py
tests/unit/analytics/: test_anonymizer_integration.py  test_combined_risk.py  test_k_anonymity.py
tests/unit/checksum/: test_luhn.py
tests/unit/context/: test_context_rules.py  test_hanja.py  test_name_dictionary.py  test_particles.py  test_romanization.py
tests/unit/dictionaries/: test_agencies.py  test_combinations.py  test_common_words.py  test_field_labels.py  test_surnames.py  test_titles.py
tests/unit/domain/: test_civil_petition.py  test_government.py  test_hr.py
tests/unit/eval/: test_benchmark_smoke.py  test_metrics.py  test_synth.py
tests/unit/generalization/: test_address.py  test_age.py  test_date.py  test_occupation.py
tests/unit/integrations/: test_mcp_server.py  test_presidio_plugin.py
tests/unit/io_/: test_file_readers.py  test_optional_formats.py
tests/unit/legal/: test_mapping.py
tests/unit/modes/: test_fpe.py  test_hashed.py  test_partial.py  test_redact.py  test_tokenize.py
tests/unit/patterns/: test_address.py  test_address_jibun.py  test_birth.py  test_card.py  test_court_case.py  test_edi_drug.py  test_fax.py  test_ip_v6.py  test_kcd.py  test_medical_insurance.py  test_passport.py  test_person.py  test_personal_attr.py  test_phone_intl.py  test_pnu.py
tests/unit/reporting/: test_certificate.py  test_html_report.py  test_summary.py
tests/unit/review/: test_feedback.py  test_queue.py
tests/unit/vault/: test_audit.py  test_encrypted.py  test_reversible.py
