[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k-pii"
version = "0.2.0"
description = "Rule-based PII detection and reversible pseudonymization for Korean public-sector documents"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["pii", "privacy", "korean", "anonymization", "pseudonymization", "government", "pipa"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
k-pii = "k_pii.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/k_pii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
